--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@react-navigation/material-bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.0.11",
     "expo": "~42.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
