--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "bike_components_manager",
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/material-bottom-tabs": "^6.0.9",
