--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bike_components_manager",
   "dependencies": {
+    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/material-bottom-tabs": "^6.0.9",
     "@react-navigation/material-top-tabs": "^6.0.6",
@@ -14,6 +15,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-pager-view": "^5.4.9",
     "react-native-paper": "^4.9.2",
+    "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-tab-view": "^3.1.1",
