--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bike_components_manager",
   "dependencies": {
+    "@react-native-community/datetimepicker": "^5.1.0",
     "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/material-bottom-tabs": "^6.0.9",
@@ -9,6 +10,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~42.0.0",
+    "expo-dev-client": "~0.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^7.19.0",
@@ -16,6 +18,7 @@
     "react-native-pager-view": "^5.4.9",
     "react-native-paper": "^4.9.2",
     "react-native-picker-select": "^8.0.4",
+    "react-native-popup-menu": "^0.15.12",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-tab-view": "^3.1.1",
