--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "dotenv": "^16.0.0",
     "expo": "~42.0.0",
     "expo-dev-client": "~0.7.2",
+    "firebase": "^9.6.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^7.19.0",
