--- a/package.json
+++ b/package.json
@@ -1,37 +1,42 @@
 {
   "name": "bike_components_manager",
   "dependencies": {
-    "@react-native-community/datetimepicker": "^5.1.0",
-    "@react-native-picker/picker": "^2.2.1",
+    "@react-native-community/datetimepicker": "4.0.0",
+    "@react-native-picker/picker": "2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/material-bottom-tabs": "^6.0.9",
     "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "axios": "^0.26.0",
     "dotenv": "^16.0.0",
-    "expo": "~42.0.0",
-    "expo-dev-client": "~0.7.2",
+    "expo": "^44.0.0",
+    "expo-auth-session": "~3.5.0",
+    "expo-cli": "^5.2.0",
+    "expo-dev-client": "~0.8.4",
+    "expo-random": "~12.1.1",
+    "expo-web-browser": "~10.1.0",
     "firebase": "^9.6.6",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-hook-form": "^7.19.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-pager-view": "^5.4.9",
+    "react-native": "0.64.3",
+    "react-native-pager-view": "5.4.9",
     "react-native-paper": "^4.9.2",
     "react-native-picker-select": "^8.0.4",
     "react-native-popup-menu": "^0.15.12",
-    "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.4.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.0.0",
-    "react-native-web": "^0.17.5"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
-    "typescript": "~4.0.0"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
+    "typescript": "~4.3.5"
   },
   "scripts": {
     "start": "expo start",
