--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
-    "expo-updates": "~0.11.6"
+    "expo-updates": "~0.11.6",
+    "expo-image-picker": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
