--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-auth-session": "~3.5.0",
     "expo-cli": "^5.2.0",
     "expo-dev-client": "~0.8.4",
+    "expo-image-picker": "~12.0.1",
     "expo-random": "~12.1.1",
     "expo-updates": "~0.11.6",
     "expo-web-browser": "~10.1.0",
@@ -23,6 +24,7 @@
     "react-dom": "17.0.1",
     "react-hook-form": "^7.19.0",
     "react-native": "0.64.3",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-pager-view": "5.4.9",
     "react-native-paper": "^4.9.2",
     "react-native-picker-select": "^8.0.4",
@@ -31,8 +33,7 @@
     "react-native-screens": "~3.10.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.0.0",
-    "react-native-web": "0.17.1",
-    "expo-image-picker": "~12.0.1"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
