--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "6.1.2",
     "@react-native-picker/picker": "2.4.0",
-    "@react-navigation/bottom-tabs": "^6.0.9",
-    "@react-navigation/material-bottom-tabs": "^6.0.9",
-    "@react-navigation/material-top-tabs": "^6.0.6",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/native-stack": "^6.2.5",
-    "@react-navigation/stack": "^6.0.11",
-    "axios": "^0.26.0",
-    "dotenv": "^16.0.0",
+    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/material-bottom-tabs": "^6.2.2",
+    "@react-navigation/material-top-tabs": "^6.2.2",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
+    "@react-navigation/stack": "^6.2.2",
+    "axios": "^0.26.1",
+    "dotenv": "^16.0.1",
     "expo": "^45.0.0",
     "expo-auth-session": "~3.6.1",
-    "expo-cli": "^5.2.0",
+    "expo-cli": "^5.6.0",
     "expo-dev-client": "~1.0.1",
     "expo-image-picker": "~13.1.1",
     "expo-random": "~12.2.0",
@@ -22,23 +22,23 @@
     "firebase": "^9.9.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.19.0",
+    "react-hook-form": "^7.33.1",
     "react-native": "0.68.2",
-    "react-native-image-viewing": "^0.2.1",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-pager-view": "5.4.15",
-    "react-native-paper": "^4.9.2",
+    "react-native-paper": "^4.12.3",
     "react-native-picker-select": "^8.0.4",
     "react-native-popup-menu": "^0.15.12",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-simple-toast": "^1.1.3",
+    "react-native-simple-toast": "^1.1.4",
     "react-native-tab-view": "^3.1.1",
-    "react-native-vector-icons": "^9.0.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
+    "@babel/core": "^7.18.9",
+    "@types/react": "^17.0.47",
     "@types/react-native": "~0.67.6",
     "typescript": "~4.3.5"
   },
