--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "bike_components_manager",
   "dependencies": {
-    "@react-native-community/datetimepicker": "6.1.2",
-    "@react-native-picker/picker": "2.4.0",
+    "@expo/cli": "^0.18.29",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/material-bottom-tabs": "^6.2.2",
     "@react-navigation/material-top-tabs": "^6.2.2",
@@ -11,43 +12,44 @@
     "@react-navigation/stack": "^6.2.2",
     "axios": "^0.26.1",
     "dotenv": "^16.0.1",
-    "expo": "^45.0.0",
-    "expo-auth-session": "~3.6.1",
-    "expo-cli": "^5.6.0",
-    "expo-dev-client": "~1.0.1",
-    "expo-image-picker": "~13.1.1",
-    "expo-random": "~12.2.0",
-    "expo-updates": "~0.13.3",
-    "expo-web-browser": "~10.2.1",
+    "expo": "^51.0.0",
+    "expo-auth-session": "~5.5.2",
+    "expo-dev-client": "~4.0.26",
+    "expo-image-picker": "~15.0.7",
+    "expo-random": "~14.0.1",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.24",
+    "expo-web-browser": "~13.0.3",
     "firebase": "^9.9.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
-    "react-native": "0.68.2",
+    "react-native": "0.74.5",
     "react-native-image-viewing": "^0.2.2",
-    "react-native-pager-view": "5.4.15",
+    "react-native-pager-view": "6.3.0",
     "react-native-paper": "^4.12.3",
-    "react-native-picker-select": "^8.0.4",
+    "react-native-picker-select": "^8.1.0",
     "react-native-popup-menu": "^0.15.12",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-simple-toast": "^1.1.4",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.9",
-    "@types/react": "^17.0.47",
-    "@types/react-native": "~0.67.6",
-    "typescript": "~4.3.5"
+    "@babel/core": "^7.24.0",
+    "@types/react": "~18.2.79",
+    "typescript": "~5.3.3"
   },
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
-  "private": true
+  "private": true,
+  "version": "1.0.0"
 }
