--- a/package.json
+++ b/package.json
@@ -44,11 +44,7 @@
     "typescript": "~5.3.3"
   },
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "android_prebuild": "eas build --profile development --platform android"
   },
   "private": true,
   "version": "1.0.0"
